# ===============================================================
# 
# Release under GPLv-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    24/03 2022 16:12
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        24/03 2022      create the file
# 
#     last modified: 24/03 2022 16:12
# ===============================================================

SUBDIRS = \
          res       \
          include   \
          src

