# ===============================================================
# 
# Release under GPLv-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    10/03 2022 16:56
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        10/03 2022      create the file
# 
#     last modified: 10/03 2022 16:56
# ===============================================================

# ------------------
# defining variables
# ------------------
_no_error_com   =
_define_com     =
_include_com    =
_sources_com    =
_cppflags_com   =
_cflags_com     =
_cxxflags_com   =
_ldflags_com    =
_ldadd_com      =
bin_PROGRAMS    =

# ---------------------
# add necessary content
# ---------------------
_no_error_com   +=

_define_com     +=

_include_com    +=

_sources_com    +=

_cppflags_com   += \
                   $(_no_error_com) \
                   $(_include_com)  \
                   $(_define_com)

_cflags_com     +=

_cxxflags_com   +=

_ldflags_com    +=

_ldadd_com      +=

bin_PROGRAMS        += demo_app
demo_app_SOURCES    = $(_sources_com) main.c
demo_app_CPPFLAGS   = $(_cppflags_com)
demo_app_CFLAGS     = $(_cflags_com)
demo_app_CXXFLAGS   = $(_cxxflags_com)
demo_app_LDFLAGS    = $(_ldflags_com)
demo_app_LDADD      = $(_ldadd_com)

