# ===============================================================
# 
# Release under GPLv-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    10/03 2022 17:08
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        10/03 2022      create the file
# 
#     last modified: 10/03 2022 17:08
# ===============================================================

if COMPILE_SELECT_CHIP_SV823
_select_chip = SV823
endif

if COMPILE_SELECT_CHIP_SV826
_select_chip = SV826
endif

SUBDIRS = $(_select_chip)

