# ===============================================================
# 
# Release under GPLv-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    23/03 2022 19:13
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        23/03 2022      create the file
# 
#     last modified: 23/03 2022 19:13
# ===============================================================

# ------------------
# defining variables
# ------------------
_install_files_com  =
fontdir             = $(prefix)/res/font
font_DATA           =

# ---------------------
# add necessary content
# ---------------------


# ------------------
# make install files
# ------------------
_install_files_com  += demo.font
font_DATA           += $(_install_files_com)

