# ===============================================================
# 
# Release under GPLv-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    10/03 2022 17:07
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        10/03 2022      create the file
# 
#     last modified: 10/03 2022 17:07
# ===============================================================

SUBDIRS = filesystem

# ------------------
# defining variables
# ------------------
_dist_file_com  =

# ---------------
# make dist files
# ---------------
_dist_file_com  += 3rd_lib

EXTRA_DIST      = $(_dist_file_com)

