# ===============================================================
# 
# Release under GPLv-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    10/03 2022 17:12
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        10/03 2022      create the file
# 
#     last modified: 10/03 2022 17:12
# ===============================================================

if COMPILE_SELECT_PRODUCT_HY_8808
_select_product = HY-8808
endif

if COMPILE_SELECT_PRODUCT_HY_8808E
_select_product = HY-8808E
endif

if COMPILE_SELECT_PRODUCT_HY_8808EV2
_select_product = HY-8808EV2
endif

SUBDIRS = ${_select_product}

